Boolean logic for GraphOS policy implementation.